--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
       <button onclick="nextQuestion('q1', 'q2')">14 August</button>
       <button onclick="nextQuestion('q1', 'q2')">3 June</button>
       <button onclick="nextQuestion('q1', 'q2')">1 May</button>
-      <button onclick="nextQuestion('q1', 'q2')">29 July ✅</button>
+      <button onclick="nextQuestion('q1', 'q2')">29 July </button>
     </div>
     <div class="question hidden" id="q2">
       <p>How many years you have been dating?</p>
       <button onclick="nextQuestion('q2', 'q3')">2 years</button>
       <button onclick="nextQuestion('q2', 'q3')">3 years</button>
       <button onclick="nextQuestion('q2', 'q3')">5 months</button>
-      <button onclick="nextQuestion('q2', 'q3')">1 year ✅</button>
+      <button onclick="nextQuestion('q2', 'q3')">1 year </button>
     </div>
     <div class="question hidden" id="q3">
       <p>How much you love your boyfriend?</p>
       <button onclick="showMessage()">A lot</button>
       <button onclick="showMessage()">More than chocolate</button>
       <button onclick="showMessage()">To the moon and back</button>
-      <button onclick="showMessage()">Infinity ♾️ ✅</button>
+      <button onclick="showMessage()">Infinity ♾</button>
     </div>
   </div>
   <div class="container hidden" id="message">
